--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       <section id="main_content">
         <h1>
 <a id="kloaka" class="anchor" href="#kloaka" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>kloaka</h1>
+
+<h2>
+<a id="bamboo-quarantineresume-bookmarklet" class="anchor" href="#bamboo-quarantineresume-bookmarklet" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bamboo quarantine/resume bookmarklet</h2>
+
+<p>Create in your browser new bookmark with next address:</p>
+
+<pre><code>javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='//bankiru.github.io/kloaka/bamboo-quarantine.js';void(0);
+</code></pre>
       </section>
     </div>
 
