--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>Create in your browser new bookmark with next address:</p>
 
-<pre><code>javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='//bankiru.github.io/kloaka/bamboo-quarantine.js';void(0);
+<pre><code>javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='//bankiru.github.io/kloaka/bamboo-quarantine.js?_'+Date.now();void(0);
 </code></pre>
       </section>
     </div>
